--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,12 @@ background: #13c6cf;
 .header {
   padding: 50px;
   text-transform: uppercase;
+  font-size: 18px;
 }
 
 .block{
 	padding: 100px;
 	color: #FFF;
-	font-size: 13px;
+	font-size: 18px;
+	text-align: center;
 }
