--- a/css/main.css
+++ b/css/main.css
@@ -1,21 +1,27 @@
 body{
-background: #13c6cf;	
+	background: #13c6cf;	
 }
 
 .container {
-  width: 100%;
+	width: 100%;
 }
 
 
 .header {
-  padding: 50px;
-  text-transform: uppercase;
-  font-size: 18px;
+	padding: 50px;
+	text-transform: uppercase;
+	font-size: 15px;
+	text-align: center;
 }
 
 .block{
-	padding: 100px;
-	color: #FFF;
+	padding: 25px;
+	color: #ffd700;
 	font-size: 18px;
 	text-align: center;
+		
+}
+
+p{
+	color: #ac336a;
 }
